# wcag-ai-copilot

./: .dockerignore  .gitignore  Jenkinsfile  README.md  README_monolith.md  docker-compose.yml  pyproject.toml  skaffold.yaml  system_documentation.md  system_documentation_microservices.md
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  nodes.py  state.py
app/api/: auth.py  deps.py  health.py
app/api/routes/: auth_routes.py  chat.py  check.py  criteria.py  history.py
app/db/: models.py  session.py
app/ingestion/: __init__.py  chunker.py  embedder.py  ingest.py  scraper.py  source_registry.py  vector_store.py
app/ingestion/parsers/: __init__.py  w3c.py
app/retrieval/: __init__.py  retriever.py
app/scripts/: __init__.py  validate_ingestion.py
deploy/charts/wcag-copilot/: Chart.yaml  values.yaml
deploy/charts/wcag-copilot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml
docs/: api-contracts.md  architecture.md  runbook.md
docs/adr/: 001-rabbitmq-over-kafka.md  002-rs256-jwt.md  003-strangler-fig-migration.md  004-llm-provider-abstraction.md  005-database-per-service.md  006-websocket-redis-pubsub.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AdvisorPane.tsx  AdvisorQA.tsx  CriteriaExplorer.tsx  Editor.tsx  HistorySidebar.tsx  ScoreCard.tsx  UrlScanner.tsx  ViolationCard.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useCheck.ts  useQA.ts
frontend/src/types/: wcag.ts
scratch/: smoke_test.py
scripts/: init-aws.sh  init-replication.sh
services/api-gateway/: Dockerfile  main.py  pyproject.toml
services/audit-service/: Dockerfile  README.md  main.py  models.py  pyproject.toml  scraper.py  scraper_s3.py  session.py  sqs_client.py
services/audit-service/agent/: graph.py  nodes.py  prompts.py  state.py
services/audit-service/llm/: provider.py  tracker.py
services/audit-service/retrieval/: embedder.py  retriever.py
services/auth-service/: Dockerfile  main.py  models.py  pyproject.toml  session.py
services/criteria-service/: Dockerfile  README.md  main.py  pyproject.toml
services/criteria-service/retrieval/: vector_store.py
services/history-service/: Dockerfile  README.md  main.py  models.py  pyproject.toml
services/ingestion-service/: Dockerfile  chunker.py  fetcher.py  main.py  models.py  pyproject.toml  source_registry.py  vector_store.py
services/ingestion-service/parsers/: w3c.py
services/qa-service/: Dockerfile  README.md  main.py  models.py  pyproject.toml  session.py
services/qa-service/retrieval/: embedder.py  vector_store.py
services/scraper-worker/: Dockerfile  README.md  pool.py  pyproject.toml  worker.py
