[project]
name = "wcag-ai-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.4",
    "markdownify>=1.2.2",
    "openai>=2.41.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
    "email-validator>=2.0.0",
]
