[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for WCAG AI Copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis[hiredis]>=5.0.0",
    "pyjwt>=2.13.0",
    "cryptography>=43.0.0",
    "httpx>=0.28.1",
    "wcag-common",
]

[tool.uv.sources]
wcag-common = { workspace = true }
