[project]
name = "audit-service"
version = "0.1.0"
description = "WCAG AI Copilot Audit Engine Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.50",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "langchain>=1.3.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "qdrant-client>=1.18.0",
    "fastembed>=0.8.0",
    "openai>=2.41.0",
    "beautifulsoup4>=4.15.0",
    "boto3>=1.35.0",
    "httpx>=0.28.1",
    "wcag-common",
]

[tool.uv.sources]
wcag-common = { workspace = true }
