[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication microservice for WCAG AI Copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "redis[hiredis]>=5.0.0",
    "pyjwt>=2.13.0",
    "cryptography>=43.0.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "wcag-common",
]

[tool.uv.sources]
wcag-common = { workspace = true }
