[project]
name = "criteria-service"
version = "0.1.0"
description = "WCAG AI Copilot Criteria Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis[hiredis]>=5.0.0",
    "qdrant-client>=1.18.0",
    "wcag-common",
]

[tool.uv.sources]
wcag-common = { workspace = true }
