[project]
name = "ingestion-service"
version = "0.1.0"
description = "WCAG AI Copilot Ingestion Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis[hiredis]>=5.0.0",
    "qdrant-client>=1.18.0",
    "fastembed>=0.8.0",
    "openai>=2.41.0",
    "beautifulsoup4>=4.15.0",
    "playwright>=1.49.0",
    "wcag-common",
]

[tool.uv.sources]
wcag-common = { workspace = true }
