[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper-worker"
version = "0.1.0"
description = "Playwright background scraper worker service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "redis>=5.0.0",
    "boto3>=1.35.0",
    "wcag-common",
]

[tool.hatch.build.targets.wheel]
bypass = true
